ratings-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ratings-api
spec: 
  selector:
    app: ratings-api
  port:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: ClusterIP
